--- a/amplify.yml
+++ b/amplify.yml
@@ -9,9 +9,14 @@ applications:
             - npm install -g pnpm@latest
             - echo "Installing dependencies..."
             - pnpm install --frozen-lockfile
+            - echo "Environment variables check:"
+            - echo "DATABASE_URL set: $([ -n \"$DATABASE_URL\" ] && echo 'YES' || echo 'NO')"
+            - echo "NEXT_PUBLIC_SUPABASE_URL set: $([ -n \"$NEXT_PUBLIC_SUPABASE_URL\" ] && echo 'YES' || echo 'NO')"
         build:
           commands:
             - echo "Building the application..."
+            - echo "Final environment check before build:"
+            - printenv | grep -E "(DATABASE_URL|SUPABASE)" || echo "No relevant env vars found"
             - pnpm run build
       artifacts:
         baseDirectory: .next
@@ -20,4 +25,19 @@ applications:
       cache:
         paths:
           - node_modules/**/*
-          - .next/cache/**/* 
+          - .next/cache/**/*
+    backend:
+      phases:
+        build:
+          commands:
+            - echo "Backend build phase"
+    customHeaders:
+      - pattern: "**/*"
+        headers:
+          - key: "Strict-Transport-Security"
+            value: "max-age=31536000; includeSubDomains"
+    env:
+      variables:
+        DATABASE_URL: $DATABASE_URL
+        NEXT_PUBLIC_SUPABASE_URL: $NEXT_PUBLIC_SUPABASE_URL
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: $NEXT_PUBLIC_SUPABASE_ANON_KEY 
