--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.32",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
